[tool.poetry]
name = "pytest-docs"
version = "0.0.1"
description = "Documentation tool for pytest"
authors = ["Or Carmi <or.carmi82@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.4"
pytest = "3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
