[tool.poetry]
name = "pytest-docs"
version = "0.0.1"
description = "Documentation tool for pytest"
authors = ["Or Carmi <or.carmi82@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/liiight/pytest_docs"
classifiers=[
        'Development Status :: 4 - Beta',
        'Framework :: Pytest',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Testing',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.4',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy',
        'Operating System :: OS Independent',
        'License :: OSI Approved :: MIT License',
    ]

[tool.poetry.scripts]
pytest11 = "docs:pytest_docs.plugin"

[tool.poetry.dependencies]
python = "^3.4"
pytest = "^3.5.0"

[tool.poetry.dev-dependencies]
tox = "^3.5"
pre-commit = "^1.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
