[tool.poetry]
name = "pytest-docs"
version = "0.0.4"
description = "Documentation tool for pytest"
authors = ["orcarmi <ocarmi@proofpoint.com>"]
homepage = "https://github.com/liiight/pytest_docs"
readme = "README.rst"
classifiers=[
        "Development Status :: 4 - Beta",
        "Framework :: Pytest",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Testing",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.4",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: MIT License",
    ]
[tool.poetry.scripts]
pytest11 = "pytest-doc=pytest_docs.plugin"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.3"
pytest = "^=3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
